parser.output
Terminals unused in grammar

   TYPE_NAME


State 381 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | CONSTANT
    4                   | CONSTANT_INT
    5                   | CONSTANT_DOUBLE
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression OP_PTR IDENTIFIER
   14                   | postfix_expression OP_INC
   15                   | postfix_expression OP_DEC
   16                   | '(' type_name ')' '{' initializer_list '}'
   17                   | '(' type_name ')' '{' initializer_list ',' '}'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 unary_expression: postfix_expression
   21                 | OP_INC unary_expression
   22                 | OP_DEC unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF '(' type_name ')'

   26 unary_operator: '&'
   27               | '*'
   28               | '+'
   29               | '-'
   30               | '~'
   31               | '!'

   32 cast_expression: unary_expression
   33                | '(' type_name ')' cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression '*' cast_expression
   36                          | multiplicative_expression '/' cast_expression
   37                          | multiplicative_expression '%' cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression '+' multiplicative_expression
   40                    | additive_expression '-' multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression OP_LEFTSHIFT additive_expression
   43                 | shift_expression OP_RIGHTSHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression '<' shift_expression
   46                      | relational_expression '>' shift_expression
   47                      | relational_expression OP_LE shift_expression
   48                      | relational_expression OP_GE shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression OP_EQ relational_expression
   51                    | equality_expression OP_NE relational_expression

   52 and_expression: equality_expression
   53               | and_expression '&' equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression '^' and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression '|' exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression OP_AND inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression OP_OR logical_and_expression

   62 conditional_expression: logical_or_expression
   63                       | logical_or_expression '?' expression ':' conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: '='
   67                    | ASSIGN_MUL
   68                    | ASSIGN_DIV
   69                    | ASSIGN_MOD
   70                    | ASSIGN_ADD
   71                    | ASSIGN_SUB
   72                    | ASSIGN_LEFTSHIFT
   73                    | ASSIGN_RIGHTSHIFT
   74                    | ASSIGN_AND
   75                    | ASSIGN_XOR
   76                    | ASSIGN_OR

   77 expression: assignment_expression
   78           | expression ',' assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers ';'
   81            | declaration_specifiers init_declarator_list ';'

   82 declaration_specifiers: storage_class_specifier
   83                       | storage_class_specifier declaration_specifiers
   84                       | type_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_qualifier
   87                       | type_qualifier declaration_specifiers
   88                       | function_specifier
   89                       | function_specifier declaration_specifiers

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list ',' init_declarator

   92 init_declarator: declarator
   93                | declarator '=' initializer

   94 storage_class_specifier: TYPEDEF
   95                        | EXTERN
   96                        | STATIC
   97                        | AUTO

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | BOOL
  108               | struct_or_union_specifier
  109               | enum_specifier

  110 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  111                          | struct_or_union '{' struct_declaration_list '}'
  112                          | struct_or_union IDENTIFIER

  113 struct_or_union: STRUCT
  114                | UNION

  115 struct_declaration_list: struct_declaration
  116                        | struct_declaration_list struct_declaration

  117 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list
  119                         | type_specifier
  120                         | type_qualifier specifier_qualifier_list
  121                         | type_qualifier

  122 struct_declarator_list: struct_declarator
  123                       | struct_declarator_list ',' struct_declarator

  124 struct_declarator: declarator
  125                  | ':' constant_expression
  126                  | declarator ':' constant_expression

  127 enum_specifier: ENUM '{' enumerator_list '}'
  128               | ENUM IDENTIFIER '{' enumerator_list '}'
  129               | ENUM '{' enumerator_list ',' '}'
  130               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  131               | ENUM IDENTIFIER

  132 enumerator_list: enumerator
  133                | enumerator_list ',' enumerator

  134 enumerator: IDENTIFIER
  135           | IDENTIFIER '=' constant_expression

  136 type_qualifier: CONST
  137               | VOLATILE

  138 function_specifier: INLINE

  139 declarator: pointer direct_declarator
  140           | direct_declarator

  141 direct_declarator: IDENTIFIER
  142                  | '(' declarator ')'
  143                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  144                  | direct_declarator '[' type_qualifier_list ']'
  145                  | direct_declarator '[' assignment_expression ']'
  146                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  147                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  148                  | direct_declarator '[' type_qualifier_list '*' ']'
  149                  | direct_declarator '[' '*' ']'
  150                  | direct_declarator '[' ']'
  151                  | direct_declarator '(' parameter_type_list ')'
  152                  | direct_declarator '(' identifier_list ')'
  153                  | direct_declarator '(' ')'

  154 pointer: '*'
  155        | '*' type_qualifier_list
  156        | '*' pointer
  157        | '*' type_qualifier_list pointer

  158 type_qualifier_list: type_qualifier
  159                    | type_qualifier_list type_qualifier

  160 parameter_type_list: parameter_list
  161                    | parameter_list ',' ELLIPSIS

  162 parameter_list: parameter_declaration
  163               | parameter_list ',' parameter_declaration

  164 parameter_declaration: declaration_specifiers declarator
  165                      | declaration_specifiers abstract_declarator
  166                      | declaration_specifiers

  167 identifier_list: IDENTIFIER
  168                | identifier_list ',' IDENTIFIER

  169 type_name: specifier_qualifier_list
  170          | specifier_qualifier_list abstract_declarator

  171 abstract_declarator: pointer
  172                    | direct_abstract_declarator
  173                    | pointer direct_abstract_declarator

  174 direct_abstract_declarator: '(' abstract_declarator ')'
  175                           | '[' ']'
  176                           | '[' assignment_expression ']'
  177                           | direct_abstract_declarator '[' ']'
  178                           | direct_abstract_declarator '[' assignment_expression ']'
  179                           | '[' '*' ']'
  180                           | direct_abstract_declarator '[' '*' ']'
  181                           | '(' ')'
  182                           | '(' parameter_type_list ')'
  183                           | direct_abstract_declarator '(' ')'
  184                           | direct_abstract_declarator '(' parameter_type_list ')'

  185 initializer: assignment_expression
  186            | '{' initializer_list '}'
  187            | '{' initializer_list ',' '}'

  188 initializer_list: initializer
  189                 | designation initializer
  190                 | initializer_list ',' initializer
  191                 | initializer_list ',' designation initializer

  192 designation: designator_list '='

  193 designator_list: designator
  194                | designator_list designator

  195 designator: '[' constant_expression ']'
  196           | '.' IDENTIFIER

  197 statement: labeled_statement
  198          | compound_statement
  199          | expression_statement
  200          | selection_statement
  201          | iteration_statement
  202          | jump_statement

  203 labeled_statement: IDENTIFIER ':' statement
  204                  | CASE constant_expression ':' statement
  205                  | DEFAULT ':' statement

  206 compound_statement: '{' '}'
  207                   | '{' block_item_list '}'

  208 block_item_list: block_item
  209                | block_item_list block_item

  210 block_item: declaration
  211           | statement

  212 expression_statement: ';'
  213                     | expression ';'

  214 selection_statement: IF '(' expression ')' statement
  215                    | IF '(' expression ')' statement ELSE statement
  216                    | SWITCH '(' expression ')' statement

  217 iteration_statement: WHILE '(' expression ')' statement
  218                    | DO statement WHILE '(' expression ')' ';'
  219                    | FOR '(' expression_statement expression_statement ')' statement
  220                    | FOR '(' expression_statement expression_statement expression ')' statement
  221                    | FOR '(' declaration expression_statement ')' statement
  222                    | FOR '(' declaration expression_statement expression ')' statement

  223 jump_statement: GOTO IDENTIFIER ';'
  224               | CONTINUE ';'
  225               | BREAK ';'
  226               | RETURN ';'
  227               | RETURN expression ';'

  228 translation_unit: external_declaration
  229                 | translation_unit external_declaration

  230 external_declaration: function_definition
  231                     | declaration

  232 function_definition: declaration_specifiers declarator declaration_list compound_statement
  233                    | declaration_specifiers declarator compound_statement

  234 declaration_list: declaration
  235                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'%' (37) 37
'&' (38) 26 53
'(' (40) 7 10 11 16 17 25 33 142 151 152 153 174 181 182 183 184 214
    215 216 217 218 219 220 221 222
')' (41) 7 10 11 16 17 25 33 142 151 152 153 174 181 182 183 184 214
    215 216 217 218 219 220 221 222
'*' (42) 27 35 148 149 154 155 156 157 179 180
'+' (43) 28 39
',' (44) 17 19 78 91 123 129 130 133 161 163 168 187 190 191
'-' (45) 29 40
'.' (46) 12 196
'/' (47) 36
':' (58) 63 125 126 203 204 205
';' (59) 80 81 117 212 213 218 223 224 225 226 227
'<' (60) 45
'=' (61) 66 93 135 192
'>' (62) 46
'?' (63) 63
'[' (91) 9 143 144 145 146 147 148 149 150 175 176 177 178 179 180
    195
']' (93) 9 143 144 145 146 147 148 149 150 175 176 177 178 179 180
    195
'^' (94) 55
'{' (123) 16 17 110 111 127 128 129 130 186 187 206 207
'|' (124) 57
'}' (125) 16 17 110 111 127 128 129 130 186 187 206 207
'~' (126) 30
error (256)
AUTO (258) 97
SIZEOF (259) 24 25
GOTO (260) 223
RETURN (261) 226 227
DO (262) 218
WHILE (263) 217 218
FOR (264) 219 220 221 222
CONTINUE (265) 224
BREAK (266) 225
SWITCH (267) 216
DEFAULT (268) 205
CASE (269) 204
IF (270) 214 215
ELSE (271) 215
FLOAT (272) 103
DOUBLE (273) 104
CHAR (274) 99
VOID (275) 98
INT (276) 101
LONG (277) 102
BOOL (278) 107
SHORT (279) 100
VOLATILE (280) 137
CONST (281) 136
SIGNED (282) 105
UNSIGNED (283) 106
STATIC (284) 96 146 147
EXTERN (285) 95
INLINE (286) 138
TYPEDEF (287) 94
STRUCT (288) 113
ENUM (289) 127 128 129 130 131
UNION (290) 114
CONSTANT (291) 3
CONSTANT_INT (292) 4
CONSTANT_DOUBLE (293) 5
ELLIPSIS (294) 161
STRING_LITERAL (295) 6
ASSIGN_RIGHTSHIFT (296) 73
ASSIGN_LEFTSHIFT (297) 72
ASSIGN_ADD (298) 70
ASSIGN_SUB (299) 71
ASSIGN_MUL (300) 67
ASSIGN_DIV (301) 68
ASSIGN_MOD (302) 69
ASSIGN_AND (303) 74
ASSIGN_OR (304) 76
TYPE_NAME (305)
ASSIGN_XOR (306) 75
IDENTIFIER (307) 2 12 13 110 112 128 130 131 134 135 141 167 168 196
    203 223
OP_RIGHTSHIFT (308) 43
OP_LEFTSHIFT (309) 42
OP_INC (310) 14 21
OP_DEC (311) 15 22
OP_PTR (312) 13
OP_AND (313) 59
OP_OR (314) 61
OP_LE (315) 47
OP_GE (316) 48
OP_EQ (317) 50
OP_NE (318) 51


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
program (89)
    on left: 1, on right: 0
primary_expression (90)
    on left: 2 3 4 5 6 7, on right: 8
postfix_expression (91)
    on left: 8 9 10 11 12 13 14 15 16 17, on right: 9 10 11 12 13 14
    15 20
argument_expression_list (92)
    on left: 18 19, on right: 11 19
unary_expression (93)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (94)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (95)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (96)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (97)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (98)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (99)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (100)
    on left: 49 50 51, on right: 50 51 52 53
and_expression (101)
    on left: 52 53, on right: 53 54 55
exclusive_or_expression (102)
    on left: 54 55, on right: 55 56 57
inclusive_or_expression (103)
    on left: 56 57, on right: 57 58 59
logical_and_expression (104)
    on left: 58 59, on right: 59 60 61
logical_or_expression (105)
    on left: 60 61, on right: 61 62 63
conditional_expression (106)
    on left: 62 63, on right: 63 64 79
assignment_expression (107)
    on left: 64 65, on right: 18 19 65 77 78 143 145 146 147 176 178
    185
assignment_operator (108)
    on left: 66 67 68 69 70 71 72 73 74 75 76, on right: 65
expression (109)
    on left: 77 78, on right: 7 9 63 78 213 214 215 216 217 218 220
    222 227
constant_expression (110)
    on left: 79, on right: 125 126 135 195 204
declaration (111)
    on left: 80 81, on right: 210 221 222 231 234 235
declaration_specifiers (112)
    on left: 82 83 84 85 86 87 88 89, on right: 80 81 83 85 87 89 164
    165 166 232 233
init_declarator_list (113)
    on left: 90 91, on right: 81 91
init_declarator (114)
    on left: 92 93, on right: 90 91
storage_class_specifier (115)
    on left: 94 95 96 97, on right: 82 83
type_specifier (116)
    on left: 98 99 100 101 102 103 104 105 106 107 108 109, on right:
    84 85 118 119
struct_or_union_specifier (117)
    on left: 110 111 112, on right: 108
struct_or_union (118)
    on left: 113 114, on right: 110 111 112
struct_declaration_list (119)
    on left: 115 116, on right: 110 111 116
struct_declaration (120)
    on left: 117, on right: 115 116
specifier_qualifier_list (121)
    on left: 118 119 120 121, on right: 117 118 120 169 170
struct_declarator_list (122)
    on left: 122 123, on right: 117 123
struct_declarator (123)
    on left: 124 125 126, on right: 122 123
enum_specifier (124)
    on left: 127 128 129 130 131, on right: 109
enumerator_list (125)
    on left: 132 133, on right: 127 128 129 130 133
enumerator (126)
    on left: 134 135, on right: 132 133
type_qualifier (127)
    on left: 136 137, on right: 86 87 120 121 158 159
function_specifier (128)
    on left: 138, on right: 88 89
declarator (129)
    on left: 139 140, on right: 92 93 124 126 142 164 232 233
direct_declarator (130)
    on left: 141 142 143 144 145 146 147 148 149 150 151 152 153, on right:
    139 140 143 144 145 146 147 148 149 150 151 152 153
pointer (131)
    on left: 154 155 156 157, on right: 139 156 157 171 173
type_qualifier_list (132)
    on left: 158 159, on right: 143 144 146 147 148 155 157 159
parameter_type_list (133)
    on left: 160 161, on right: 151 182 184
parameter_list (134)
    on left: 162 163, on right: 160 161 163
parameter_declaration (135)
    on left: 164 165 166, on right: 162 163
identifier_list (136)
    on left: 167 168, on right: 152 168
type_name (137)
    on left: 169 170, on right: 16 17 25 33
abstract_declarator (138)
    on left: 171 172 173, on right: 165 170 174
direct_abstract_declarator (139)
    on left: 174 175 176 177 178 179 180 181 182 183 184, on right:
    172 173 177 178 180 183 184
initializer (140)
    on left: 185 186 187, on right: 93 188 189 190 191
initializer_list (141)
    on left: 188 189 190 191, on right: 16 17 186 187 190 191
designation (142)
    on left: 192, on right: 189 191
designator_list (143)
    on left: 193 194, on right: 192 194
designator (144)
    on left: 195 196, on right: 193 194
statement (145)
    on left: 197 198 199 200 201 202, on right: 203 204 205 211 214
    215 216 217 218 219 220 221 222
labeled_statement (146)
    on left: 203 204 205, on right: 197
compound_statement (147)
    on left: 206 207, on right: 198 232 233
block_item_list (148)
    on left: 208 209, on right: 207 209
block_item (149)
    on left: 210 211, on right: 208 209
expression_statement (150)
    on left: 212 213, on right: 199 219 220 221 222
selection_statement (151)
    on left: 214 215 216, on right: 200
iteration_statement (152)
    on left: 217 218 219 220 221 222, on right: 201
jump_statement (153)
    on left: 223 224 225 226 227, on right: 202
translation_unit (154)
    on left: 228 229, on right: 1 229
external_declaration (155)
    on left: 230 231, on right: 228 229
function_definition (156)
    on left: 232 233, on right: 230
declaration_list (157)
    on left: 234 235, on right: 232 235


state 0

    0 $accept: . program $end

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    program                    go to state 21
    declaration                go to state 22
    declaration_specifiers     go to state 23
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30
    translation_unit           go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33


state 1

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


state 2

  103 type_specifier: FLOAT .

    $default  reduce using rule 103 (type_specifier)


state 3

  104 type_specifier: DOUBLE .

    $default  reduce using rule 104 (type_specifier)


state 4

   99 type_specifier: CHAR .

    $default  reduce using rule 99 (type_specifier)


state 5

   98 type_specifier: VOID .

    $default  reduce using rule 98 (type_specifier)


state 6

  101 type_specifier: INT .

    $default  reduce using rule 101 (type_specifier)


state 7

  102 type_specifier: LONG .

    $default  reduce using rule 102 (type_specifier)


state 8

  107 type_specifier: BOOL .

    $default  reduce using rule 107 (type_specifier)


state 9

  100 type_specifier: SHORT .

    $default  reduce using rule 100 (type_specifier)


state 10

  137 type_qualifier: VOLATILE .

    $default  reduce using rule 137 (type_qualifier)


state 11

  136 type_qualifier: CONST .

    $default  reduce using rule 136 (type_qualifier)


state 12

  105 type_specifier: SIGNED .

    $default  reduce using rule 105 (type_specifier)


state 13

  106 type_specifier: UNSIGNED .

    $default  reduce using rule 106 (type_specifier)


state 14

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


state 15

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


state 16

  138 function_specifier: INLINE .

    $default  reduce using rule 138 (function_specifier)


state 17

   94 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 94 (storage_class_specifier)


state 18

  113 struct_or_union: STRUCT .

    $default  reduce using rule 113 (struct_or_union)


state 19

  127 enum_specifier: ENUM . '{' enumerator_list '}'
  128               | ENUM . IDENTIFIER '{' enumerator_list '}'
  129               | ENUM . '{' enumerator_list ',' '}'
  130               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  131               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 34
    '{'         shift, and go to state 35


state 20

  114 struct_or_union: UNION .

    $default  reduce using rule 114 (struct_or_union)


state 21

    0 $accept: program . $end

    $end  shift, and go to state 36


state 22

  231 external_declaration: declaration .

    $default  reduce using rule 231 (external_declaration)


state 23

   80 declaration: declaration_specifiers . ';'
   81            | declaration_specifiers . init_declarator_list ';'
  232 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  233                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 37
    ';'         shift, and go to state 38
    '*'         shift, and go to state 39
    '('         shift, and go to state 40

    init_declarator_list  go to state 41
    init_declarator       go to state 42
    declarator            go to state 43
    direct_declarator     go to state 44
    pointer               go to state 45


state 24

   82 declaration_specifiers: storage_class_specifier .
   83                       | storage_class_specifier . declaration_specifiers

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 46
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30


state 25

   84 declaration_specifiers: type_specifier .
   85                       | type_specifier . declaration_specifiers

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30


state 26

  108 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 108 (type_specifier)


state 27

  110 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  111                          | struct_or_union . '{' struct_declaration_list '}'
  112                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 48
    '{'         shift, and go to state 49


state 28

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


state 29

   86 declaration_specifiers: type_qualifier .
   87                       | type_qualifier . declaration_specifiers

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30


state 30

   88 declaration_specifiers: function_specifier .
   89                       | function_specifier . declaration_specifiers

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30


state 31

    1 program: translation_unit .
  229 translation_unit: translation_unit . external_declaration

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20

    $default  reduce using rule 1 (program)

    declaration                go to state 22
    declaration_specifiers     go to state 23
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30
    external_declaration       go to state 52
    function_definition        go to state 33


state 32

  228 translation_unit: external_declaration .

    $default  reduce using rule 228 (translation_unit)


state 33

  230 external_declaration: function_definition .

    $default  reduce using rule 230 (external_declaration)


state 34

  128 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  130               | ENUM IDENTIFIER . '{' enumerator_list ',' '}'
  131               | ENUM IDENTIFIER .

    '{'  shift, and go to state 53

    $default  reduce using rule 131 (enum_specifier)


state 35

  127 enum_specifier: ENUM '{' . enumerator_list '}'
  129               | ENUM '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 54

    enumerator_list  go to state 55
    enumerator       go to state 56


state 36

    0 $accept: program $end .

    $default  accept


state 37

  141 direct_declarator: IDENTIFIER .

    $default  reduce using rule 141 (direct_declarator)


state 38

   80 declaration: declaration_specifiers ';' .

    $default  reduce using rule 80 (declaration)


state 39

  154 pointer: '*' .
  155        | '*' . type_qualifier_list
  156        | '*' . pointer
  157        | '*' . type_qualifier_list pointer

    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    '*'       shift, and go to state 39

    $default  reduce using rule 154 (pointer)

    type_qualifier       go to state 57
    pointer              go to state 58
    type_qualifier_list  go to state 59


state 40

  142 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 37
    '*'         shift, and go to state 39
    '('         shift, and go to state 40

    declarator         go to state 60
    direct_declarator  go to state 44
    pointer            go to state 45


state 41

   81 declaration: declaration_specifiers init_declarator_list . ';'
   91 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 61
    ','  shift, and go to state 62


state 42

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


state 43

   92 init_declarator: declarator .
   93                | declarator . '=' initializer
  232 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  233                    | declaration_specifiers declarator . compound_statement

    AUTO      shift, and go to state 1
    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STATIC    shift, and go to state 14
    EXTERN    shift, and go to state 15
    INLINE    shift, and go to state 16
    TYPEDEF   shift, and go to state 17
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20
    '='       shift, and go to state 63
    '{'       shift, and go to state 64

    $default  reduce using rule 92 (init_declarator)

    declaration                go to state 65
    declaration_specifiers     go to state 66
    storage_class_specifier    go to state 24
    type_specifier             go to state 25
    struct_or_union_specifier  go to state 26
    struct_or_union            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    function_specifier         go to state 30
    compound_statement         go to state 67
    declaration_list           go to state 68


state 44

  140 declarator: direct_declarator .
  143 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  144                  | direct_declarator . '[' type_qualifier_list ']'
  145                  | direct_declarator . '[' assignment_expression ']'
  146                  | direct_declarator . '[' STATIC type_qualifier_list assignment_expression ']'
  147                  | direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'
  148                  | direct_declarator . '[' type_qualifier_list '*' ']'
  149                  | direct_declarator . '[' '*' ']'
  150                  | direct_declarator . '[' ']'
  151                  | direct_declarator . '(' parameter_type_list ')'
  152                  | direct_declarator . '(' identifier_list ')'
  153                  | direct_declarator . '(' ')'

    '('  shift, and go to state 69
    '['  shift, and go to state 70

    $default  reduce using rule 140 (declarator)


state 45

  139 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 37
    '('         shift, and go to state 40

    direct_declarator  go to state 71


state 46

   83 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


state 47

   85 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers)


state 48

  110 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
  112                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 72

    $default  reduce using rule 112 (struct_or_union_specifier)


state 49

  111 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    FLOAT     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    CHAR      shift, and go to state 4
    VOID      shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    BOOL      shift, and go to state 8
    SHORT     shift, and go to state 9
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 11
    SIGNED    shift, and go to state 12
    UNSIGNED  shift, and go to state 13
    STRUCT    shift, and go to state 18
    ENUM      shift, and go to state 19
    UNION     shift, and go to state 20
